Don't animate caret-color: auto

This patch enables ColorPropertyFunctions to effectively return nullptr
instead of a StyleColor when the property doesn't have a color value.
This allows us to not run animations for caret-color when one side is "auto".

TEST=external/csswg-test/css-ui-3/caret-color-021.html
BUG=676295,681424

Review-Url: https://codereview.chromium.org/2694383002
Cr-Commit-Position: refs/heads/master@{#451183}

Former-commit-id: 9a661d2c478a78a6bba5938b42f624a81a17329e